# us-congress

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  run_pyright.py
.github/workflows/: ci.yml  release.yml
congress/: __init__.py  _client.py  _config.py  congress.py
congress/_api/: fetch.py  interface.py
congress/_members/: service.py
congress/_transformation/: interface.py  service.py
congress/_utils/: timer.py  unique.py
congress/_utils/log/: configureLogger.py  configureLogger.py.03a0e625b20905b712dc29977c1d146f.tmp  filters.py
tests/: conftest.py  serviceTestFixtures.py  utils.py
tests/integration/congress/: congress_test.py  mockApi.py
tests/unit/congress/api/: congress_fetch_test.py
tests/unit/congress/members/: congress_members_repo_test.py
tests/unit/congress/transformation/: congress_transformation_test.py
tests/unit/utils/: census_utils_test.py  utils_test.py
typings/callee/: __init__.pyi  _compat.pyi  attributes.pyi  base.pyi  collections.pyi  functions.pyi  general.pyi  numbers.pyi  objects.pyi  operators.pyi  strings.pyi  types.pyi
typings/punq/: __init__.pyi  _compat.pyi
typings/us/: __init__.pyi  states.pyi  unitedstatesofamerica.pyi
us_congress/: __init__.py  _client.py  _exceptions.py  congress.py
us_congress/_api/: fetch.py  interface.py  models.py
us_congress/_members/: interface.py  service.py
us_congress/_transformation/: interface.py  service.py
us_congress/_utils/: chunk.py
us_congress/_utils/log/: configureLogger.py  factory.py
