[tool.poetry]
authors = ["Joel Krim <drawjk705@gmail.com>"]
description = "Client to work with US Congress data"
license = "MIT"
name = "us_congress"
version = "0.1.1"

[tool.poetry.dependencies]
pandas = "^1.2.0"
punq = "^0.4.1"
python = "^3.9"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
us = "^2.0.2"

[tool.poetry.dev-dependencies]
black = { version = "^20.8b1", allow-prereleases = true }
callee = "^0.3.1"
data-science-types = "^0.2.22"
hypothesis = "^6.0.2"
ipython = "^7.19.0"
ipywidgets = "^7.6.2"
isort = "^5.7.0"
jupyter_nbextensions_configurator = "^0.4.1"
jupyterlab = "^3.0.1"
poethepoet = "^0.9.0"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
pytest-clarity = "^0.3.0-alpha.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.5.0"
pytest-randomly = "^3.5.0"
pytest-sugar = "^0.9.4"
pytest-tldr = "^0.2.2"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poe.tasks]
clean = "rm rf ./**/__pycache__"
lint = "black . --check --exclude typings"
lint-fix = "black . --exclude typings"
precommit-run = "pre-commit run --all-files"
precommit-update = "pre-commit autoupdate"
sort-imports = "isort ."
test = "pytest -m \"not integration\""
test-coverage = "pytest --cov-report term-missing:skip-covered --cov=us_congress tests/"
test-integration = "pytest -m integration"
typing = "pyright --outputjson"

[tool.isort]
profile = "black"
skip_glob = "**/typings/**"
src_paths = ["us_congress", "tests"]
